Prefer the simplified (Stream).toList() function over the collect() function